user confirm for update privacy and terms